--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Felicity Jones</title>
+    <title>Doux Salem Kayembe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Curriculum vitae Felicity Jones" />
-    <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
+    <meta name="description" content="Curriculum vitae Doux Salem Kayembe" />
+    <meta name="keywords" content="curriculo, vitae, doux, salem, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -35,7 +35,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Felicity <span>Jones</span></div></a>
+            <a href="index.html#home"><div class="site-title">Doux <span>Salem</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -65,7 +65,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Felicity Jones</div>
+          <div class="mobile-site-title">Doux Salem Kayembe</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -88,20 +88,29 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images/felicity.jpeg" alt="Felicity Jones">
+                        <img src="images/Imagem_Salem.jpg" alt="Doux Salem Kayembe">
                       </div>
                     </div>
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Felicity Jones</h1>
+                        <h1>Doux Salem Kayembe</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Web Designer</div>
+                            <div class="sp-subtitle">Eletrical Engineering student</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Frontend-developer</div>
+                            <div class="sp-subtitle">Systems Analysis and Development student</div>
+                          </div>                          
+                          <div class="item">
+                            <div class="sp-subtitle">Frontend-developer student</div>
                           </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Backend-developer student</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Web Designer student</div>
+                          </div>                                                    
                         </div>
                       </div>
 
@@ -122,7 +131,7 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá! Eu sou a Felicity Jones. Gosto de gatos, video games e programação. Aqui você irá encontrar algumas outras
+                        <p>Olá! eu sou Doux Salem Kayembe. Adoro ler, escrever, viajar, gosto de video games, esportes e programação. Aqui você irá encontrar algumas outras
                         informações sobre mim.</p>
                       </div>
                       <div class="download-resume">
@@ -132,10 +141,10 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value">29</span></li>
-                        <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
-                        <li><span class="title">Cidade/Estado</span><span class="value">São Paulo, SP</span></li>
-                        <li><span class="title">E-mail</span><span class="value">felicity@geekuniversity.com.br</span></li>
+                        <li><span class="title">Idade</span><span class="value"> </span></li>
+                        <li><span class="title">Nacionalidade</span><span class="value">Congolês</span></li>
+                        <li><span class="title">Cidade/Estado</span><span class="value">Rio de janeiro/ RJ</span></li>
+                        <li><span class="title">E-mail</span><span class="value">douxsalem.kayembe@gmail.com</span></li>
                         <li><span class="title">Fone</span><span class="value">+5511 123 456 789</span></li>
                         <li><span class="title">Freelance</span><span class="value available">Disponível</span></li>
                       </ul>
