--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Doux <span>Salem</span></div></a>
+            <a href="index.html#home"><div class="site-title">Doux <span>Salem </span>Kayembe<span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -115,9 +115,9 @@
                       </div>
 
                       <div class="social-links">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://twitter.com/salemescritor"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/douxsalem.kayembe"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/salemescritor/"><i class="fa fa-instagram"></i></a>
                       </div>
                     </div>
                   </div>
@@ -141,11 +141,11 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value"> </span></li>
+                        <li><span class="title">Idade</span><span class="value"> ... </span></li>
                         <li><span class="title">Nacionalidade</span><span class="value">Congolês</span></li>
                         <li><span class="title">Cidade/Estado</span><span class="value">Rio de janeiro/ RJ</span></li>
                         <li><span class="title">E-mail</span><span class="value">douxsalem.kayembe@gmail.com</span></li>
-                        <li><span class="title">Fone</span><span class="value">+5511 123 456 789</span></li>
+                        <li><span class="title">Fone</span><span class="value">+5521 979 913 295</span></li>
                         <li><span class="title">Freelance</span><span class="value available">Disponível</span></li>
                       </ul>
                     </div>
