Alterei informacoes do Resume subpage

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá! eu sou Doux Salem Kayembe. Adoro ler, escrever, viajar, gosto de video games, esportes e programação. Aqui você irá encontrar algumas outras
+                        <p>Olá! sou Doux Salem Kayembe. Adoro ler, escrever, viajar, gosto de video games, esportes e programação. Aqui você irá encontrar algumas outras
                         informações sobre mim.</p>
                       </div>
                       <div class="download-resume">
@@ -174,28 +174,32 @@
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Graduação em Enchenharia Elétrica</h4>
+                            <span class="item-period">2017 - Atual</span>
+                            <span class="item-small">Universidade Federal Fluminense (UFF)</span>
+                            <p class="item-description">Fui bolsita PIBITI etrabalhei no desenvolvimento de um assistenta automóvel infantil
+                              autónomo com movimentação
+                              controlada por reconhecimento
+                              de imagens.
+                              </p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Tecnólogo em Análise e desenvolvimento de sistemas</h4>
+                            <span class="item-period">2019 - Atual</span>
+                            <span class="item-small">Universidade Estácio de sá.</span>
+                            <p class="item-description">Iniciar uma nova graduação na estácio me ensinou quão forte podia ser a nossa força de vontade.</p>
                           </div>
                           <!-- / Education 2 -->
 
                           <!-- Education 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Técnico em eletricidade industrial</h4>
+                            <span class="item-period">2013</span>
+                            <span class="item-small">Institut Tecnhique Industriel de la Gombe</span>
+                            <p class="item-description">Kinshasa / RDC</p>
                           </div>
                           <!-- / Education 3 -->
                         </div>
@@ -205,36 +209,28 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Experiência Profissional</h3>
+                          <h3>Experiência </h3>
                         </div>
 
                         <div class="timeline">
                           <!-- Experience 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Frontend-developer</h4>
-                            <span class="item-period">Dec 2012 - Current</span>
-                            <span class="item-small">Web Agency</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Web Disigner</h4>
+                            <span class="item-period"> - </span>
+                            <span class="item-small"> Estudando </span>
+                            <p class="item-description">Entre saber fazer e fazer, há um oceano de perguntas</p>
                           </div>
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Web Designer</h4>
-                            <span class="item-period">Dec 2011 - Nov 2012</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Frontend-developer</h4>
+                            <span class="item-period">2019 - </span>
+                            <span class="item-small">Estácio</span>
+                            <p class="item-description">Iniciei em 2019 uma temporada de aprendizado sem fim onde melhoro a cada dia. </p>
                           </div>
                           <!-- / Experience 2 -->
 
-                          <!-- Experience 3 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Graphic Designer</h4>
-                            <span class="item-period">Jan 2010 - Dec 2011</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
-                          <!-- / Experience 3 -->
                         </div>
                       </div>
                     </div>
@@ -244,21 +240,22 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Design <span>Skills</span></h3>
+                          <h3>Outros <span>Skills</span></h3>
                         </div>
 
                         <div class="skills-info">
-                          <h4>Web Design</h4>                               
+                          <h4>AUTOCAD, F.E.M.M,
+                            OCTAVE, MATLAB, LOGISIM</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-1"></div>
                           </div>
 
-                          <h4>Graphic Design</h4>
+                          <h4>Pacote Office</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-2"></div>
                           </div>
 
-                          <h4>Print Design</h4>
+                          <h4>Web Design</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-3"></div>
                           </div> 
@@ -274,17 +271,17 @@
                         </div>
 
                         <div class="skills-info">
-                          <h4>HTML5</h4>                               
+                          <h4>PYTHON</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-4"></div>
                           </div>
 
-                          <h4>CSS3/LESS/SASS</h4>
+                          <h4>FORTRAN</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-5"></div>
                           </div>
 
-                          <h4>jQuery</h4>
+                          <h4>C++</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-6"></div>
                           </div> 
