--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value"> ... </span></li>
+                        <li><span class="title"></span><span class="value"> </span></li>
                         <li><span class="title">Nacionalidade</span><span class="value">Congolês</span></li>
                         <li><span class="title">Cidade/Estado</span><span class="value">Rio de janeiro/ RJ</span></li>
                         <li><span class="title">E-mail</span><span class="value">douxsalem.kayembe@gmail.com</span></li>
@@ -349,7 +349,7 @@
 
                   </div>
                   <!-- End of My Services -->
-                  
+
                   <!-- Portfolio Content -->
                   <div class="portfolio-content">
                                 
