modifiquei o currículo e deletei algumas imagens nos diretorios

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <h4 class="item-title">Graduação em Enchenharia Elétrica</h4>
                             <span class="item-period">2017 - Atual</span>
                             <span class="item-small">Universidade Federal Fluminense (UFF)</span>
-                            <p class="item-description">Fui bolsita PIBITI etrabalhei no desenvolvimento de um assistenta automóvel infantil
+                            <p class="item-description">Fui bolsita PIBITI e trabalhei no desenvolvimento de um assistente automóvel infantil
                               autónomo com movimentação
                               controlada por reconhecimento
                               de imagens.
@@ -190,7 +190,7 @@
                             <h4 class="item-title">Tecnólogo em Análise e desenvolvimento de sistemas</h4>
                             <span class="item-period">2019 - Atual</span>
                             <span class="item-small">Universidade Estácio de sá.</span>
-                            <p class="item-description">Iniciar uma nova graduação na estácio me ensinou quão forte podia ser a nossa força de vontade.</p>
+                            <p class="item-description">Iniciar uma nova graduação na estácio me ensinou o quão forte podia ser a nossa força de vontade.</p>
                           </div>
                           <!-- / Education 2 -->
 
